--- a/user-guide/assistify-live-chat-meta-data-history.adoc
+++ b/user-guide/assistify-live-chat-meta-data-history.adoc
@@ -1,4 +1,4 @@
-=== Metainformationen und bisherige Kundenanfragen im LiveChat
+=== Metainformationen und bisherige Kundenanfragen im Live-Chat
 
 Der Assistify Livechat liefern einige nützliche Informationen zu einem Kunden. 
 
@@ -9,7 +9,9 @@ In der rechten Spalte unter Info kann man erkennen, wie der Kunde heißt, wie
 seine E-Mail Adresse ist, mit welchem Browserer unterwegs ist und welche Seiten
 er auf der Webseite, auf der sich der Livechat befindet, er besucht hat. 
 
+====
 image:attachments/68240618/68240614.png[]
+====
 
 Darüber hinaus kann man hier weitere Aktionen tätigen.
 Informationen zu diesen Aktionen sind im Artikel
@@ -23,4 +25,6 @@ Unter dem Sprechblasensymbol findet man bisherige, abgeschlossene
 Gespräche mit dem Kunden. Mit einem Klick auf ein Gespräch kann man den
 Verlauf einsehen.
 
+====
 image:attachments/68240618/68240615.png[]
+====
