Corrected image alignment

--- a/user-guide/section-answer-help-requests.adoc
+++ b/user-guide/section-answer-help-requests.adoc
@@ -12,7 +12,7 @@ linken Spalte unter Anfragen ist die neue Anfrage sichtbar und fett
 markiert.
 
 ====
-image::69766654.png[Request,200,role="left"]
+image::69766654.png[Request,200]
 ====
 
 
