--- a/user-guide/section-off-the-record-messages.adoc
+++ b/user-guide/section-off-the-record-messages.adoc
@@ -9,7 +9,7 @@ Du kannst deine Direktnachrichten absichern, indem Du Off-the-record
 Schlüssel-Symbol in der rechten Navigationsleiste.
 
 [TIP]
-image::68231846.png[Secure,860,role="left"]
+image::68231846.png[Secure,860,role="text-center"]
 
 NOTE: Wenn Du dich in einem OTR-Chat befindest, dann haben die Nachrichten ein
 Schlüsselsymbol und werden verschlüsselt versendet. Nachdem die OTR
@@ -28,6 +28,6 @@ verschlüsselten Konversation teilnehmen muss.
 
 Die OTR-Konversation funktioniert derzeit nicht im Internet Explorer.
 [CAUTION]
-image::68231847.png[ORT,860,role="left"]
+image::68231847.png[ORT,860,role="text-center"]
 
 ====
