--- a/README.adoc
+++ b/README.adoc
@@ -2,11 +2,6 @@
 
 Assistify is a group chat system with integrated artificial intelligence (AI).
 
-Currently there are two user guides available
-
-* <<user-guide.adoc#, Assistify User Guide>>
-* <<manager-guide.adoc#, Assistify Manager Guide>>
-
 [TIP]
 ====
 The overall project's documentation is still under heavy writing.
@@ -18,11 +13,12 @@ You might want to check the components' documentation until we got things right.
 Until then, feel free to link:https://github.com/assistify/assistify.github.io/issues/new[create an issue] to get in touch with us
 ====
 
-== Purpose
-__ Make people collaborate in a faster, satisfying, human manner.__
-
-
 == Motivation
+
+
+[.lead.text-center]
+Make people collaborate in a faster, satisfying, human manner.
+
 The actual reason for having humans employed is the lack of appropriate machines. At least, that's what one could say looking at the mega-trend of automation and the current rise of artificial intelligence (or at least the expectations towards it).
 
 When analyzing why humans still seem to be quite popular, it's clear that two aspects will be unique to them for quite a long time: _creativity_ and _flexibility_.
@@ -31,6 +27,7 @@ Even though machine learning has made an incredible progress during the past yea
 Thus, _Assistify aims at accelerating the human part of work_, freeing them from mechanical tasks so that they can play to their _unique powers_.
 
 == Consequence
+
 During the day-to-day business, humans have to fulfill tasks which only occupy the less interesting part of their brains: Talk or write to other people, document agreements, take notes of things learned, look up information written down by themselves or others in order to perform a particular duty.
 Often, they need to operate systems which need structured input which requires a transformation of their knowledge.
 
@@ -39,6 +36,7 @@ And this is where Assistify comes into the picture: It provides a human protocol
 For what AI can deliver today is making sense of things that are already tangible: Texts, pictures, documented interactions. Text analysis, semantic search and also intent analysis are already available as matured components with a plethora of implementations.
 
 == Our verdict
+
 - We believe in humans. We want to help them focus on what makes them unique and thus foster communication super-powered by AI-based implicit search and intent analysis.
 - All components shall be on-premise-ready on order to allow deploying them in corporate boundaries.
 - We value (some may say "worship") open source. All components we consume or create shall be published in a corporate-friendly license.
